# Python-Game-Jam-2026-

./: README.md  pyproject.toml  run_game.py
assets/tiled/: 1bitplatformer.tsx  level_002.tmx
core/: camera.py  engine.py  gui.py  hud.py  map_loader.py  network.py  portal.py  scene.py  tutorial.py
core/config/: constants.py  game_settings.py  levels.py
core/scenes/: base_gameplay.py  disconnected.py  lobby.py  main_menu.py  network_gameplay.py  pause.py  settings.py
